Resolved merge conflicts

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="topic"></div>
         <p>From a young age, I've always been keen on exploring the world around me. Whether it's hitting the trails on my bike, scoring goals on the football field, or tackling outdoor adventures, I've always had a passion for staying active and embracing the great outdoors. Alongside my love for sports, I'm dedicated to maintaining a healthy lifestyle, working out regularly to stay in peak physical condition. My curiosity extends beyond the playing field into the realm of computer science. I remember asking my dad how the Road Rash game worked when I was just seven years old. Although his response was more of a promise for future understanding, it sparked a curiosity in me that persists to this day. Now, at 20, as I delve deeper into the world of computer science, I’m beginning to understand how things work on a fundamental level. If I were to describe myself in one line: I am persistent, practical, and ambitious, with a keen eye for detail and a relentless work ethic.</p>
         <div class="button">
-          <a href="Devesh 4.pdf"><button>Download CV </button></a>
+          <a href="Saint_Gobain.pdf"><button>Download CV </button></a>
         </div>
       </div>
     </div>
@@ -78,31 +78,32 @@
     <div class="title"><span>My Skills</span></div>
     <div class="skills-details">
       <div class="text">
-        <div class="topic">Skills Reflect Our Knowledge</div>
-        <p>I have knowledge of various programming languages and tools. Below are my key technical skills:</p>
+        <div class="topic">Skills Reflect My Expertise</div>
+        <p>I have expertise in programming, cloud technologies, and various tools. Below are my key technical skills:</p>
         <ul>
-          <li><strong>Programming Languages:</strong> Python</li>
-          <li><strong>Tools and Technologies:</strong> AutoCAD, AWS, Figma, Git, Power BI, Wordpress</li>
-          <li><strong>Productivity Software:</strong> Microsoft Word, Microsoft Excel, Typing Speed: 75 WPM</li>
+          <li><strong>Programming Languages:</strong> Python, Java</li>
+          <li><strong>Cloud & Development Tools:</strong> AWS, Git, Figma, OpenAI</li>
+          <li><strong>Productivity Software:</strong> Microsoft Office, Google Workspace, Typing Speed: 75 WPM</li>
           <li><strong>Web Technologies:</strong> HTML5, CSS3, REACT</li>
+          <li><strong>Databases:</strong> SQL, MongoDB</li>
         </ul>
       </div>
       <div class="boxes">
         <div class="box">
           <div class="topic">AWS</div>
-          <div class="per">90%</div>
-        </div>
-        <div class="box">
-          <div class="topic">Designing</div>
           <div class="per">80%</div>
         </div>
         <div class="box">
-          <div class="topic">Web Development</div>
+          <div class="topic">Designing</div>
+          <div class="per">70%</div>
+        </div>
+        <div class="box">
+          <div class="topic">Web Dev</div>
           <div class="per">70%</div>
         </div>
         <div class="box">
           <div class="topic">Python</div>
-          <div class="per">60%</div>
+          <div class="per">70%</div>
         </div>
       </div>
     </div>
@@ -152,8 +153,8 @@
     </div>
     <br>
     <div class="text">
-      <div class="topic">Have Any Project?</div>
-      <p>Do you have any project regarding websites or responsive design? I am ready to work on your idea.</p>
+      <div class="topic">Have a Project?</div>
+      <p>Whether it's a web development project or a cloud-based solution, I'm here to bring your ideas to life. Let's collaborate to achieve your goals efficiently and effectively.</p>
       <div class="button">
         <a href="mailto:deveshrai162@gmail.com"><button>Mail Me</button></a>
       </div>
