Web Developer ---> Software Engineer

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="text">
       <div class="text-one">Hello,</div>
       <div class="text-two">I'm Devesh Rai</div>
-      <div class="text-three">Web Developer</div>
+      <div class="text-three">Software Engineer</div>
       <div class="text-four">From Mumbai</div>
     </div>
     <div class="button">
