Updated age and CS Fundamentals and Skills section

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
       <div class="right">
         <div class="topic"></div>
-        <p>From a young age, I've always been keen on exploring the world around me. Whether it's hitting the trails on my bike, scoring goals on the football field, or tackling outdoor adventures, I've always had a passion for staying active and embracing the great outdoors. Alongside my love for sports, I'm dedicated to maintaining a healthy lifestyle, working out regularly to stay in peak physical condition. My curiosity extends beyond the playing field into the realm of computer science. I remember asking my dad how the Road Rash game worked when I was just seven years old. Although his response was more of a promise for future understanding, it sparked a curiosity in me that persists to this day. Now, at 20, as I delve deeper into the world of computer science, I’m beginning to understand how things work on a fundamental level. If I were to describe myself in one line: I am persistent, practical, and ambitious, with a keen eye for detail and a relentless work ethic.</p>
+        <p>From a young age, I've always been keen on exploring the world around me. Whether it's hitting the trails on my bike, scoring goals on the football field, or tackling outdoor adventures, I've always had a passion for staying active and embracing the great outdoors. Alongside my love for sports, I'm dedicated to maintaining a healthy lifestyle, working out regularly to stay in peak physical condition. My curiosity extends beyond the playing field into the realm of computer science. I remember asking my dad how the Road Rash game worked when I was just seven years old. Although his response was more of a promise for future understanding, it sparked a curiosity in me that persists to this day. Now, at 21, as I delve deeper into the world of computer science, I’m beginning to understand how things work on a fundamental level. If I were to describe myself in one line: I am persistent, practical, and ambitious, with a keen eye for detail and a relentless work ethic.</p>
         <div class="button">
           <a href="Devesh Resume 5.pdf"><button>Download CV </button></a>
         </div>
@@ -82,10 +82,11 @@
         <p>I have expertise in programming, cloud technologies, and various tools. Below are my key technical skills:</p>
         <ul>
           <li><strong>Programming Languages:</strong> Python, Java</li>
-          <li><strong>Cloud & Development Tools:</strong> AWS, Git, Figma, OpenAI</li>
+          <li><strong>Cloud & Development Tools:</strong> AWS, Terraform, Genkins, Git, Figma, OpenAI</li>
           <li><strong>Productivity Software:</strong> Microsoft Office, Google Workspace, Typing Speed: 75 WPM</li>
           <li><strong>Web Technologies:</strong> HTML5, CSS3, REACT</li>
-          <li><strong>Databases:</strong> SQL, MongoDB</li>
+          <li><strong>Databases:</strong> SQL, MongoDB, DynamoDB, RDS, Aurora, Redshift</li>
+          <li><strong>CS Fundamentals: </strong> Data Structures and Algorithms, Object Oriented Programming, Computer Networks, DBMS, OS, Software Development Life Cycle (SDLC)</li>
         </ul>
       </div>
       <div class="boxes">
